--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Graphik:wght@400;700&display=swap');
-
 *,
 *::before,
 *::after {
@@ -9,13 +7,19 @@
 }
 
 :root {
-    --main-color: #374754;
-    --title-color: #252B42;
+    --main-text-color: #374754;
+    --title-color: #252b42;
     --header-color: #fff;
-	--button-color: #2091F9;
+	--section-color: #fff;
+	--button-background-color: #2091f9;
+	--button-text-color: #fff;
+	--input-background-color: #f4f4f4;
+	--input-border-color: #e8e8e8;
+	--input-text-color: #18171d;
     font-family: 'Graphik', sans-serif;
     scroll-behavior: smooth;
 }
+
 img {
     display: block;
     width: 100%;
